[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roblox-watcher"
version = "0.1.2"
description = "Roblox session watcher"
requires-python = ">=3.8"
dependencies = ["psutil"]

[tool.setuptools]
packages = ["roblox_watcher"]

[tool.setuptools.package-data]
roblox_watcher = ["*.py"]
