[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roblox-watcher"
version = "0.3.0"
description = "Monitor active Roblox sessions via log files — no injection, no API keys"
requires-python = ">=3.9"
dependencies = ["psutil"]

[tool.setuptools]
packages = ["roblox_watcher"]

[tool.setuptools.package-data]
roblox_watcher = ["*.py"]
